# rpg-rust-service

./: .env  Cargo.toml  README.md
src/: main.rs
src/schema/: player.rs
